Add：以"交易所代碼"搜尋 Update：ETF 搜尋頁按鈕

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFSearch/EtfSearchIndex.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFSearch/EtfSearchIndex.cshtml
@@ -82,36 +82,6 @@
                 });
             }
 
-            function currencyLink(obj) {
-                let btnHtml = '@Html.CurrencyLink(null, "null")';
-                let $Btn = $(btnHtml);
-                $Btn.text(obj.CurrencyPair.Value);
-                return $Btn[0].outerHTML;
-            }
-
-            function focusButton(obj){
-                let btnHtml = '@Html.FocusButton(null, null, null, InvestTypeEnum.ETF, true)';
-                let $Btn = $(btnHtml);
-                $Btn.eq(0).setEleAttribute('eh-focus-id', obj.FirstBankCode);
-                $Btn.eq(0).setEleAttribute('eh-focus-name', obj.ETFName);
-                return $Btn[0].outerHTML;
-            }
-
-            function compareButton(obj){
-                let btnHtml = '@Html.CompareButton(null, null, null, InvestTypeEnum.ETF, true)';
-                let $Btn = $(btnHtml);
-                $Btn.eq(0).setEleAttribute('eh-compare-id', obj.FirstBankCode);
-                $Btn.eq(0).setEleAttribute('eh-compare-name', obj.ETFName);
-                return $Btn[0].outerHTML;
-            }
-
-            function subscriptionButton(obj) {
-                let btnHtml = '@Html.SubscriptionButton(null, null, InvestTypeEnum.ETF, true)';
-                let $Btn = $(btnHtml);
-                $Btn.eq(0).setEleAttribute('eh-subscription-id', obj.FirstBankCode);
-                return $Btn[0].outerHTML;
-            }
-
             const propertyResetObj = [
                 'InceptionDateMarketPriceOriginalCurrency'
                 , 'YeartoDateReturnMarketPriceOriginalCurrency'
@@ -295,7 +265,7 @@
                         { field: 'AnnualizedStandardDeviationMarketPriceRisk.Value', ele: '[data-slider-val="standard"]', type: 'range', delimiter: ',' },
                     ],
                     search: {
-                        ele: '#uid-searchbox', fields: ['FirstBankCode', 'ETFName'], start_length: 2, bindEvent: false, multi: function () {
+                        ele: '#uid-searchbox', fields: ['FirstBankCode', 'ETFName', 'ExchangeCode.Value'], start_length: 2, bindEvent: false, multi: function () {
                             let texts = [];
                             $('[data-filter-tag="關鍵字"] .o-pickedTag__text').each(function (i, ele) {
                                 let matches = ele.innerHTML.match(/關鍵字\s+(.+)/);
@@ -331,11 +301,6 @@
                             //if (record.FirstBankCode == '35AB') {
                             //    console.log(record);
                             //}
-
-                            record.FocusButtonHtml = focusButton(record);
-                            record.CompareButtonHtml = compareButton(record);
-                            record.SubscribeButtonHtml = subscriptionButton(record);
-                            record.CurrencyHtml = currencyLink(record);
 
                             for (let r in record) {
                                 if (propertyResetObj.includes(r)) {
@@ -536,29 +501,25 @@
                         $(container).find('[data-ia]').interactive();
                         // 綁定 like icon 的彈跳登入畫面
                         $(container).find('[data-popup]').magnificPopup();
+                        $(container).find('[eh-compare]').trigger('exec');
+                        $(container).find('[eh-focus]').trigger('exec');
+                        $(container).find('[eh-subscription-type]').trigger('exec');
                     },
                     formatResult: function (suggestion, currentValue) {
                         let detailUrl = suggestion.data.detailUrl ? suggestion.data.detailUrl : '#';
-                        let className = suggestion.data.isLike ? 'is-active' : '';
 
                         // like 按鈕
-                        let likeWord = suggestion.data.isNews ? '加入收藏|取消收藏' : '加入關注|取消關注';
-                        let $like = suggestion.data.isLike != null ? suggestion.data.isLogin == true ?
-                            // <!-- [data-ia]: 展示 icon 的互動操作功能 -->
-                            `<a href="#" class="o-statusBtn o-statusBtn--like ${className}" data-msg="${likeWord}" data-ia="true"></a>` :
-                            // <!-- [data-popup]: 未登入開啟登入彈跳視窗 -->
-                            `<a href="#popupLogin" class="o-statusBtn o-statusBtn--like ${className}" data-popup="true"><i></i></a>` : '';
-
+                        let $like = `<a ${suggestion.data.focusBtnHtml}></a>`;
                         // 申購按鈕
-                        let $purchase = suggestion.data.purchase ? suggestion.data.isLogin == true ? `<div class="c-itemKeyword__actions"><a href="#popupPurchase" class="o-btn o-btn--primary o-btn--auto o-btn--thinest" data-popup="true">申購</a></div>` : `<div class="c-itemKeyword__actions"><a href="#popupLogin" class="o-btn o-btn--primary o-btn--auto o-btn--thinest" data-popup="true">申購</a></div>` : '';
-                        return `<div class="c-itemKeyword">
-                <a href="${detailUrl}" class="c-itemKeyword__content" target="_blank">
+                        let $purchase = suggestion.data.purchase ? `<div class="c-itemKeyword__actions"><a ${suggestion.data.subscribeBtnHtml}>申購</a></div>` : '';
 
-                    <div class="c-itemKeyword__title">${$.Autocomplete.defaults.formatResult(suggestion, currentValue)}</div>
-                </a>
-                <div class="c-itemKeyword__collections">${$like}</div>
-                ${$purchase}
-            </div>`;
+                        return `<div class="c-itemKeyword">
+                                <a href="${detailUrl}" class="c-itemKeyword__content" target="_blank">
+                                    <div class="c-itemKeyword__title">${$.Autocomplete.defaults.formatResult(suggestion, currentValue)}</div>
+                                </a>
+                                <div class="c-itemKeyword__collections">${$like}</div>
+                                ${$purchase}
+                            </div>`;
                     }
                 });
             }
@@ -605,10 +566,10 @@
                                 value: item.FirstBankCode + ' ' + item.ETFName,
                                 data: {
                                     type: 'ETF',
-                                    isLogin: false,
-                                    isLike: false,
                                     detailUrl: url + '?' + $.param({ id: item.FirstBankCode }),
-                                    purchase: item.CanOnlineSubscription
+                                    purchase: item.CanOnlineSubscription,
+                                    focusBtnHtml: item.FocusButtonAutoHtml,
+                                    subscribeBtnHtml: item.SubscribeButtonAutoHtml
                                 }
                             };
                             list.push(obj);
