fix: 調整login in controller

--- a/src/Feature/Account/platform/Views/Feature/Wealth/Account/MemberSettings/_CommonFunctionSetting.cshtml
+++ b/src/Feature/Account/platform/Views/Feature/Wealth/Account/MemberSettings/_CommonFunctionSetting.cshtml
@@ -58,7 +58,8 @@
                 url: "@ClientRoute.GenerateUrl(this, "Accounts", "GetCommonFunctions")",
                 success: function (resp) {
                     if (resp && resp.statusCode == 200) {
-                        if (resp.body.length >0) {
+                        if (resp.body.length > 0) {
+                            $('[data-common-length]').text(resp.body.length);
                             for (var i = 0; i < resp.body.length; i++) {
                                 let itemId = resp.body[i].pageGuid;
                                 commonArray.push(itemId);
