--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/MarketTrend/MarketTrend.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/MarketTrend/MarketTrend.cshtml
@@ -206,7 +206,7 @@
                                                                 <span class="o-views o-views--xs">@item.News[0].ViewCount</span>
                                                             </div>
                                                             <div class="c-minorInfo__like">
-                                                                <a href="#popupLogin" class="o-statusBtn o-statusBtn--sm o-statusBtn--like" data-after="收藏" data-msg="加入收藏|取消收藏" data-popup="true"></a>
+                                                                @* <a href="#popupLogin" class="o-statusBtn o-statusBtn--sm o-statusBtn--like" data-after="收藏" data-msg="加入收藏|取消收藏" data-popup="true"></a> *@
                                                             </div>
                                                         </div>
                                                     </div>
@@ -235,7 +235,7 @@
                                                                                 <span class="o-views o-views--xs">@news.ViewCount</span>
                                                                             </div>
                                                                             <div class="c-minorInfo__like">
-                                                                                <a href="#popupLogin" class="o-statusBtn o-statusBtn--sm o-statusBtn--like" data-after="收藏" data-msg="加入收藏|取消收藏" data-popup="true"></a>
+                                                                                @* <a href="#popupLogin" class="o-statusBtn o-statusBtn--sm o-statusBtn--like" data-after="收藏" data-msg="加入收藏|取消收藏" data-popup="true"></a> *@
                                                                             </div>
                                                                         </div>
                                                                     </div>
