--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Compare/FundETFCompare.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Compare/FundETFCompare.cshtml
@@ -1076,7 +1076,7 @@
             // 加入指數
             $('[data-stock-add]').on('click', function (e) {
                 e.preventDefault();
-                var stockId = $('[data-stock-select]').val();
+                var stockId = DOMPurify.sanitize($('[data-stock-select]').val());
                 const element = `[data-stock-select] option[value="${stockId}"]`;
                 $(element).prop('disabled', true).trigger('change');
                 var result = stockParams.some(function (item) {
