--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundDetail/FundDetailOverseas.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundDetail/FundDetailOverseas.cshtml
@@ -2715,12 +2715,12 @@
                     });
                     for (let i = 0; i < yearData.length; i++) {
                         dividendTableHtml += `<tr>
-                                       <td>${emptyValueToDash(yearData[i].BaseDate)}</td>
-                                       <td>${emptyValueToDash(yearData[i].ExDividendDate)}</td>
-                                       <td>${emptyValueToDash(yearData[i].ReleaseDate)}</td>
-                                       <td>配息</td>
-                                       <td>${yearData[i].Dividend}</td>
-                                             </tr>`
+                                           <td>${emptyValueToDash(yearData[i].BaseDate)}</td>
+                                           <td>${emptyValueToDash(yearData[i].ExDividendDate)}</td>
+                                           <td>${emptyValueToDash(yearData[i].ReleaseDate)}</td>
+                                           <td>配息</td>
+                                           <td>${yearData[i].Dividend}</td>
+                                                 </tr>`
                     }
                     $('#dividendTable').html(dividendTableHtml);
 
@@ -2782,7 +2782,7 @@
                     if (result && result.resultSet.result[0].v1) {
                         //公開說明書
                         $('#openDoc').removeClass("u-hidden")
-                        $('#openDoc').find('a')[0].setAttribute("href", DOMPurify.sanitize(result.resultSet.result[0].v1));
+                        $('#openDoc').find('a')[0].setAttribute("href", new URL(result.resultSet.result[0].v1));
                     } else {
                         $('#openDoc').addClass("u-hidden")
                         $('#openDoc').find('a')[0].setAttribute("href", "");
@@ -2804,7 +2804,7 @@
                     if (result && result.resultSet.result[0].v1) {
                         //財務報告書
                         $('#financialReportDoc').removeClass("u-hidden")
-                        $('#financialReportDoc').find('a')[0].setAttribute("href", DOMPurify.sanitize(result.resultSet.result[0].v1));
+                        $('#financialReportDoc').find('a')[0].setAttribute("href", new URL(result.resultSet.result[0].v1));
                     } else {
                         $('#financialReportDoc').addClass("u-hidden")
                         $('#financialReportDoc').find('a')[0].setAttribute("href", "");
@@ -2826,7 +2826,7 @@
                     if (result && result.resultSet.result[0].v1) {
                         //基金月報
                         $('#monthReportDoc').removeClass("u-hidden")
-                        $('#monthReportDoc').find('a')[0].setAttribute("href", DOMPurify.sanitize(result.resultSet.result[0].v1));
+                        $('#monthReportDoc').find('a')[0].setAttribute("href", new URL(result.resultSet.result[0].v1));
                     } else {
                         $('#monthReportDoc').addClass("u-hidden")
                         $('#monthReportDoc').find('a')[0].setAttribute("href", "");
@@ -2848,7 +2848,7 @@
                     //投資人專屬
                     if (result && result.resultSet.result[0].v1) {
                         $('#investExclusiveDoc').removeClass("u-hidden")
-                        $('#investExclusiveDoc').find('a')[0].setAttribute("href", DOMPurify.sanitize(result.resultSet.result[0].v1));
+                        $('#investExclusiveDoc').find('a')[0].setAttribute("href", new URL(result.resultSet.result[0].v1));
                     } else {
                         $('#investExclusiveDoc').addClass("u-hidden")
                         $('#investExclusiveDoc').find('a')[0].setAttribute("href", "");
@@ -2870,7 +2870,7 @@
                     //投資人一般
                     if (result && result.resultSet.result[0].v1) {
                         $('#investNomnalDoc').removeClass("u-hidden")
-                        $('#investNomnalDoc').find('a')[0].setAttribute("href", DOMPurify.sanitize(result.resultSet.result[0].v1));
+                        $('#investNomnalDoc').find('a')[0].setAttribute("href", new URL(result.resultSet.result[0].v1));
                     } else {
                         $('#investNomnalDoc').addClass("u-hidden")
                         $('#investNomnalDoc').find('a')[0].setAttribute("href", "");
@@ -4125,49 +4125,49 @@
                                 if (i === 0 || i === 6) {
                                     let hiddenHeadClass = i === 6 ? "u-hidden@lt" : "";
                                     tbHtml += `<div class="l-flex__item">
-                                                    <div class="l-table">
-                                                        <table class="c-table u-center">
-                                                            <colgroup>
-                                                                <col style="width: 33.33%;">
-                                                                <col style="width: 33.33%;">
-                                                                <col style="width: 33.33%;">
-                                                            </colgroup>
-                                                            <thead class="${hiddenHeadClass}">
-                                                                <tr>
-                                                                    <th>
-                                                                        <div class="c-table__title">
-                                                                            <span>規模日期</span>
-                                                                        </div>
-                                                                    </th>
-                                                                    <th>
-                                                                        <div class="c-table__title">
-                                                                            <span>規模(百萬)</span>
-                                                                        </div>
-                                                                    </th>
-                                                                    <th>
-                                                                        <div class="c-table__title">
-                                                                            <span>幣別</span>
-                                                                        </div>
-                                                                    </th>
-                                                                </tr>
-                                                            </thead>
-                                                            <tbody>`;
+                                                        <div class="l-table">
+                                                            <table class="c-table u-center">
+                                                                <colgroup>
+                                                                    <col style="width: 33.33%;">
+                                                                    <col style="width: 33.33%;">
+                                                                    <col style="width: 33.33%;">
+                                                                </colgroup>
+                                                                <thead class="${hiddenHeadClass}">
+                                                                    <tr>
+                                                                        <th>
+                                                                            <div class="c-table__title">
+                                                                                <span>規模日期</span>
+                                                                            </div>
+                                                                        </th>
+                                                                        <th>
+                                                                            <div class="c-table__title">
+                                                                                <span>規模(百萬)</span>
+                                                                            </div>
+                                                                        </th>
+                                                                        <th>
+                                                                            <div class="c-table__title">
+                                                                                <span>幣別</span>
+                                                                            </div>
+                                                                        </th>
+                                                                    </tr>
+                                                                </thead>
+                                                                <tbody>`;
                                 }
                                 tbHtml += ` <tr>
-                                                      <td>
-                                                           ${rangeData[i].ScaleDate}
-                                                                    </td>
-                                                                    <td>
-                                                                     ${numberComma(Math.round(rangeData[i].Scale, 3))}
-                                                                    </td>
-                                                                    <td>
-                                                                         ${rangeData[i].Currency}
-                                                                    </td>
-                                                                </tr>`;
+                                                          <td>
+                                                               ${rangeData[i].ScaleDate}
+                                                                        </td>
+                                                                        <td>
+                                                                         ${numberComma(Math.round(rangeData[i].Scale, 3))}
+                                                                        </td>
+                                                                        <td>
+                                                                             ${rangeData[i].Currency}
+                                                                        </td>
+                                                                    </tr>`;
                                 if (i === 5 || i === rangeData - 1) {
                                     tbHtml += `   </tbody>
-                                                        </table>
-                                                    </div> </div>`;
+                                                            </table>
+                                                        </div> </div>`;
                                 }
 
 
