--- a/src/Feature/Account/platform/Views/Feature/Wealth/Account/Oauth/Oauth.cshtml
+++ b/src/Feature/Account/platform/Views/Feature/Wealth/Account/Oauth/Oauth.cshtml
@@ -5,7 +5,11 @@
         xhr.send(null);
         xhr.onload = function () {
             let res = JSON.parse(xhr.responseText);
+            if (res.url == '') {
+                           location.href = '/';
+            }else{
             const url = new URL(res.url);
            location.href = url;
+            }
         }
 </script>
