Update : 移除Struct Product List Datasource的Detail Page Item 欄位、 添加Settings結構型商品連結設定、 修正 "近30日參考贖回價" 表格點擊下方按鈕無法輪播的問題、 修正瀏覽人次無法正常更新問題 添加列表頁HashTag點擊後回列表功能

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/StructuredProduct/StructuredProductSearch.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/StructuredProduct/StructuredProductSearch.cshtml
@@ -460,7 +460,6 @@
 
         }
 
-
         function currencyLink(obj) {
             let btnHtml = '@Html.CurrencyLink(null, "null")';
             let $Btn = $(btnHtml);
@@ -491,6 +490,8 @@
             if (!jQuery) {
                 return;
             }
+
+            let hashStringProcessed = false;
 
             let modelData = @Html.Raw(new JavaScriptSerializer().Serialize(Model));
 
@@ -542,6 +543,19 @@
 
                     initFilter(data);
                     initAutocomplete(data);
+
+                    if (!hashStringProcessed) {
+                        hashStringProcessed = true;
+
+                        var hash = window.location.hash;
+                        var hashStringHotTopic = hash ? decodeURIComponent(hash.split('=')[1]) : null;
+
+                        if (hashStringHotTopic != null && hashStringHotTopic != "") {
+                            $("input[value='" + hashStringHotTopic + "']").trigger('click');
+                        }
+
+                        window.location.hash = '';
+                    }
                 }
             });
 
