--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/EFirstChoice/EFirstChoice.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/EFirstChoice/EFirstChoice.cshtml
@@ -271,7 +271,7 @@
 					data: { selectedId: selectedId, orderby: orderby, desc: desc },
 					success: function (data) {
 						$('#result').empty();
-						document.getElementById('result').innerHTML = data;
+                        document.getElementById('result').innerHTML = DOMPurify.sanitize(data);
 						Removefall();
 						$('[data-popup]').magnificPopup();
 						$('[eh-compare]').trigger('exec');
