--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/NewFund/NewFund.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/NewFund/NewFund.cshtml
@@ -163,7 +163,7 @@
                     success: function (data) {
                         if (data) {
                             $('#result').empty();
-                            document.getElementById('result').innerHTML = data;
+                            document.getElementById('result').innerHTML = DOMPurify.sanitize(data);
                             $('[data-popup]').magnificPopup();
                             $('[eh-compare]').trigger('exec');
                             $('[eh-focus]').trigger('exec');
