--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/PerformanceFundRank/PerformanceFundRank.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/PerformanceFundRank/PerformanceFundRank.cshtml
@@ -1,4 +1,5 @@
-﻿@using Foundation.Wealth.Helper
+﻿
+@using Foundation.Wealth.Helper
 @using Feature.Wealth.Component.Models.PerformanceFundRank
 @model PerformanceFundRankModel
 
@@ -413,7 +414,7 @@
                     success: function (data) {
                         if (data) {
                             var tabContent = document.getElementById(tabTarget);
-                            tabContent.innerHTML = data;
+                            tabContent.innerHTML = DOMPurify.sanitize(data);
                             $('[data-popup]').magnificPopup();
                             $('[eh-compare]').trigger('exec');
                             $('[eh-focus]').trigger('exec');
