--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/StructuredProduct/StructuredProductSearch.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/StructuredProduct/StructuredProductSearch.cshtml
@@ -509,6 +509,8 @@
                 success: function (data) {
                     console.log(data);
 
+                    data = DOMPurify.sanitize(data);
+
                     $.each(data, function (index, item) {
                         // 新增 ProductDisplayName 欄位
                         item.ProductDisplayName = item.ProductCode + " " + item.ProductName;
